[package]
name = "runng-sys"
version = "0.1.0"
authors = ["Jake Woltersdorf <jeikabu@gmail.com>"]

description = "Bindings to nng (Nanomsg-Next-Generation)"
keywords = ["nng", "nanomsg"]
license = "MIT"
repository = "https://github.com/jeikabu/runng"

[dependencies]

[build-dependencies]
cmake = "0.1"
bindgen = "0.40"