[package]
name = "runng-sys"
version = "1.1.1+4"
authors = ["Jake W <jeikabu@gmail.com>"]

description = "Bindings to nng (Nanomsg-Next-Generation) aka Nanomsg2"
keywords = ["nng", "nanomsg", "zeromq"]
categories = ["network-programming", "external-ffi-bindings", "os"]
license = "MIT"
repository = "https://github.com/jeikabu/runng"
readme = "README.md"

[badges]
appveyor = { repository = "jake-ruyi/runng", branch = "master", service = "github" }
travis-ci = { repository = "jeikabu/runng", branch = "master" }

[features]
# Use ninja for cmake generator
ninja = []

[build-dependencies]
cmake = "0.1"
bindgen = "0.40"

[package.metadata.docs.rs]
all-features = false