[package]
name = "runng-sys"
version = "1.1.1-rc.3"
authors = ["Jake W <jeikabu@gmail.com>"]

description = "Bindings to nng (Nanomsg-Next-Generation) aka Nanomsg2"
keywords = ["nng", "nanomsg", "zeromq"]
categories = ["network-programming", "external-ffi-bindings", "os"]
license = "MIT"
repository = "https://github.com/jeikabu/runng"
readme = "README.md"
edition = "2018"

[badges]
appveyor = { repository = "jake-ruyi/runng", branch = "master", service = "github" }
travis-ci = { repository = "jeikabu/runng", branch = "master" }

[features]
default = ["stats"]
# Cmake generators
ninja = [] # Ninja
vs2017 = [] # Visual Studio 15 2017 Win64
# Enable NNG stats
stats = []
# Enable TLS (requires mbedTLS)
tls = []

[build-dependencies]
cmake = "0.1"
bindgen = "0.40"

[package.metadata.docs.rs]
all-features = false