[package]
name = "runng-sys"
version = "1.1.1-rc.4"
authors = ["Jake W <jeikabu@gmail.com>"]

description = "Bindings to nng (Nanomsg-Next-Generation) aka Nanomsg2"
keywords = ["nng", "nanomsg", "zeromq"]
categories = ["network-programming", "external-ffi-bindings", "os"]
license = "MIT"
repository = "https://github.com/jeikabu/runng"
readme = "README.md"
edition = "2018"

[badges]
appveyor = { repository = "jake-ruyi/runng", branch = "master", service = "github" }
travis-ci = { repository = "jeikabu/runng", branch = "master" }

[features]
default = ["nng-stats"]
# Cmake generators
cmake-ninja = [] # Ninja
cmake-vs2017 = [] # Visual Studio 15 2017
cmake-vs2017-win64 = [] # Visual Studio 15 2017 Win64
# Enable NNG stats
nng-stats = []
# Enable TLS (requires mbedTLS)
nng-tls = []
# Generate legacy API from 1.1.1-rc.4
legacy-111-rc4 = []

[dependencies]
cty = "0.1"

[build-dependencies]
cmake = "0.1"
bindgen = "0.47"

[package.metadata.docs.rs]
all-features = false