[package]
name = "runng_thrift"
version = "0.1.0"
authors = ["Jake <jeikabu+github@gmail.com>"]
description = "Thrift channel/protocol over nng via [runng](https://crates.io/crates/runng)"
keywords = ["runng", "thrift", "nng"]
license = "MIT"
repository = "https://github.com/jeikabu/runng"
edition = "2018"

[dependencies]
runng = { version = "0.1", path = "../runng" }
thrift = { version = "0.12.0" }
try_from = "0.2"
ordered-float = "1.0"
log = "0.4"